<resources>
    <string name="app_name">BloodBank</string>
    <string name="Place_Picker_Api_key">AIzaSyCgwIjNdH_8RstyiBZmi9trhs_xfbO9Xl8</string>
    <string name="skip">تخطي</string>
    <string name="login_user_name">اسم المستخدم</string>
    <string name="login_password">كلمه المرور</string>
    <string name="forget_email"> هل نسيت كلمه المرور؟</string>
    <string name="remember_me">تزكرني</string>
    <string name="login_register">تسجيل</string>
    <string name="login_start">دخول</string>
    <string name="register_address">انشاء مستخدم جديد</string>
    <string name="register_name">الاسم</string>
    <string name="Register_email">البريد الالكتروني</string>
    <string name="Register_birthday">تاريخ الميلاد</string>
    <string name="Register_blood">فصيله الدم</string>
    <string name="Register_last_date">اخر تاريخ تبرع</string>
    <string name="Register_phone">رقم التليفون</string>
    <string name="Register_password">كلمه المرور</string>
    <string name="Register_repassword">تاكيد كلمه المرور</string>
    <string name="Register_registe">تسجيل</string>

    <string name="Country">المحافظه</string>
    <string name="city">المدينه</string>

    <string-array name="BloodType">
        <item>فصيله الدم</item>
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_close">Close</string>
    <string name="toolbar_open">Open</string>


    <string name="about_text">هذا المحتوى موجود هنا لكتابه بعض من حول هذا البرنامج وعن طريقه عمله وكيفيه تشغيله ببساطه وعن الاصدار المستخدم .</string>


    <string name="dail_up_text_send">&#032;نص الرساله</string>
    <string name="dail_up_client_address">&#032;عنوان المرسل</string>
    <string name="dail_up_phone">&#032;الجوال</string>
    <string name="dail_up_email">&#032;البريد الالكتروني</string>
    <string name="dail_up_name">&#032;الاسم</string>
    <string name="dail_up_contact_as">تواصل معنا</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_notification_text">هذا النص مودجود هنا لحجز هذه المساحه لكي يوضع فيه العنوان المناسب لهذه الصفحه بعد حين استدخام البرنامج مهو من الاشياء المتاح تعديلات بمحتواح بحسب المناسب لهذا البرنامج وضع هنا هذا النص للحجز من مساحه الصفحه .</string>
    <string name="edit_notification_blood_kind">فصائل الدم</string>
    <string name="information_edit_button">تعديل</string>
    <string name="information_address">تعديل البيانات</string>
    <string name="about_application_slider">About application</string>
    <string name="donation_order_address">طلب التبرع</string>
    <string name="donation_order_name">الاسم</string>
    <string name="donation_order_age">العمر</string>
    <string name="donation_order_blood">فصيله الدم</string>
    <string name="donation_order_bags">عدد الاكياس</string>
    <string name="donation_order_hospital">اسم المستشفى</string>
    <string name="donation_order_hospital_address">عنوان المستشفى</string>
    <string name="donation_order_phone">رقم الهاتف</string>
    <string name="donation_order_note">الملاحظات</string>
    <string name="donation_order_send">ارسال الطلب</string>
    <string name="login_user">com.example.khalid.bloodbank.ui.activity.user</string>
    <string name="login_check_box">com.example.khalid.bloodbank.ui.activity.checkbox</string>
    <string name="login_pass">com.example.khalid.bloodbank.ui.activity.pass</string>
    <string name="title_activity_details">DetailsActivity</string>
</resources>
