<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ui.fragment.registerCycle.RegisterFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:text="@string/register_address"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/register_name_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_rounded_corner"
        android:inputType="text"
        android:textAlignment="viewEnd"
        android:hint="@string/register_name"
        />
    <EditText
        android:id="@+id/register_email_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_rounded_corner"
        android:layout_marginTop="15dp"
        android:hint="@string/Register_email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewEnd"
        />
    <EditText
        android:id="@+id/register_birthday_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:focusable="false"
        android:background="@drawable/edittext_rounded_corner"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_date_calender"
        android:hint="@string/Register_birthday"
        android:textDirection="rtl"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_rounded_corner"
        >
        <Spinner
            android:id="@+id/register_BloodType_spn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="visible"
            android:focusableInTouchMode="false"
            android:layoutDirection="rtl"
            android:textAlignment="viewEnd"
            />
    </RelativeLayout>
    <EditText
        android:id="@+id/register_last_time_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_rounded_corner"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="false"
        android:drawableStart="@drawable/ic_date_calender"
        android:hint="@string/Register_last_date"
        android:textDirection="rtl"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_rounded_corner"
        >
        <Spinner
            android:id="@+id/register_countries_spn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="visible"
            android:focusableInTouchMode="false"
            android:layoutDirection="rtl"
            />
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/edittext_rounded_corner"
    >
    <Spinner
        android:id="@+id/register_cities_spn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:focusableInTouchMode="true"
        android:layoutDirection="rtl"
        />
</RelativeLayout>
    <EditText
        android:id="@+id/register_phone_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_rounded_corner"
        android:inputType="textPassword"
        android:textAlignment="viewEnd"
        android:layout_marginTop="15dp"
        android:hint="@string/Register_phone"
        />
    <EditText
        android:id="@+id/register_password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_rounded_corner"
        android:inputType="textPassword"
        android:textAlignment="viewEnd"
        android:layout_marginTop="15dp"
        android:hint="@string/Register_password"
        />
    <EditText
        android:id="@+id/register_repassword_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_rounded_corner"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:hint="@string/Register_repassword"
        />

</LinearLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_marginBottom="10dp">
    <Button
        android:id="@+id/register_registe_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#3CB371"
        android:text="@string/Register_registe"
        android:textStyle="bold"
        />
</RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>