<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.fragment.navigationViewCycle.InformationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textStyle="bold"
            android:text="@string/information_address"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/cairo"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/My_Information_Name_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_rounded_corner"
            android:inputType="text"
            android:textAlignment="viewEnd"
            android:hint="@string/register_name"
            />
        <EditText
            android:id="@+id/My_Information_Email_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_rounded_corner"
            android:layout_marginTop="15dp"
            android:hint="@string/Register_email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewEnd"
            />
        <EditText
            android:id="@+id/My_Information_BirthDay_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="false"
            android:background="@drawable/edittext_rounded_corner"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_date_calender"
            android:hint="@string/Register_birthday"
            android:inputType="date"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_rounded_corner"
            >
            <Spinner
                android:id="@+id/My_Information_BloodType_spn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:visibility="visible"
                android:focusableInTouchMode="false"
                android:layoutDirection="rtl"
                android:textAlignment="viewEnd"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/My_Information_LastDate_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_rounded_corner"
            android:layout_marginTop="15dp"
            android:inputType="date"
            android:drawableStart="@drawable/ic_date_calender"
            android:hint="@string/Register_last_date"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_rounded_corner"
            >
        <Spinner android:id="@+id/My_Information_Countries_Spn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layoutDirection="rtl"
            />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_rounded_corner"
            >
            <Spinner
                android:id="@+id/My_Information_Cities_Spn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:focusableInTouchMode="true"
                android:layoutDirection="rtl"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/My_Information_Phone_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_rounded_corner"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:hint="@string/Register_phone"
            />
        <EditText
            android:id="@+id/My_Information_Password_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_rounded_corner"
            android:inputType="textPassword"
            android:textAlignment="viewEnd"
            android:layout_marginTop="15dp"
            android:hint="@string/Register_password"
            />
        <EditText
            android:id="@+id/My_Information_password_Confirm_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_rounded_corner"
            android:inputType="textPassword"
            android:textAlignment="viewEnd"
            android:layout_marginTop="15dp"
            android:hint="@string/Register_repassword"
            />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/My_Information_Edit_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:background="#3AB54A"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/information_edit_button"
            android:textStyle="bold"
            />
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>