<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.fragment.registerCycle.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">


                <ImageView
                    android:id="@+id/img_login_logo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="60dp"
                    android:src="@drawable/ic_logo" />

                <EditText
                    android:id="@+id/Login_Username_Et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/img_login_logo"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/edittext_rounded_corner"
                    android:hint="@string/login_user_name"
                    android:inputType="text"
                    android:textAlignment="viewEnd"
                    android:layoutDirection="ltr"
                    />

                <EditText
                    android:id="@+id/Login_Password_Et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/Login_Username_Et"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_rounded_corner"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:textAlignment="viewEnd"
                    android:layoutDirection="ltr"/>

                <CheckBox
                    android:id="@+id/Login_Checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Login_Password_Et"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/cairo"
                    android:layoutDirection="rtl"
                    android:text="@string/remember_me" />

                <TextView
                    android:id="@+id/tv_forget_email"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/Login_Password_Et"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:drawableEnd="@drawable/ic_warning_yellow"
                    android:fontFamily="@font/cairo"
                    android:text="@string/forget_email" />

                <Button
                    android:id="@+id/Login_Start_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Login_Password_Et"
                    android:layout_marginTop="80dp"
                    android:background="#3AB54A"
                    android:text="@string/login_start"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/Login_Register_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Login_Start_Btn"
                    android:layout_marginTop="15dp"
                    android:background="#3598DB"
                    android:text="@string/login_register"
                    android:textStyle="bold" />


            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>