<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.navigationViewCycle.DielUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="\u0020\u0020الجوال  :  012413541215+"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_drawer_phone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="\u0020 البريد الاكتروني  :  name@name.com"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_drawer_mail"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_marginStart="30dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_ico_facebook"
            />
        <Button
            android:layout_marginStart="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_ico_twitter"/>
        <Button
            android:layout_marginStart="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_ico_youtube"/>
        <Button
            android:layout_marginStart="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_ico_instgram"/>
        <Button
            android:layout_marginStart="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_ico_goo"/>

    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/dail_up_contact_as"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="20dp"
        android:textColor="#fff"
        android:background="@color/colorAccent"/>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/dail_up_name"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@drawable/edittext_rounded_corner"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/dail_up_email"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@drawable/edittext_rounded_corner"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/dail_up_phone"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@drawable/edittext_rounded_corner"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/dail_up_client_address"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@drawable/edittext_rounded_corner"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/dail_up_text_send"
        android:textSize="15dp"
        android:textStyle="bold"
        android:background="@drawable/edittext_rounded_corner"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ارسال"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:background="@color/colorAccent"/>
    </RelativeLayout>

</LinearLayout>